# nature.com

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  Procfile  README.md  TECHNICAL_SPECIFICATION.md  chainEDGE.html  combined.rs  config.py  consolidated_sniper.rs  engine.py  entrypoint.sh  full_transcription.txt  generate_pdf.py  index.html  main.py  main.rs  nixpacks.toml  railway.json  register.html  register.php  requirements.txt  run.py  seed_db.py  smart_money_tracker.py  tarjimakinolar.html  tracker.py  treyler.html  whale_tracker.py  whale_tracker_v4 (2).py  wsgi.py
backend/: .env  .gitignore  requirements.txt
backend/app/: __init__.py  ai_analyzer.py  config.py  email_service.py  instagram_scraper.py  instagram_scraper_real.py  models.py  pyrogram_client.py  routes.py  scraper.py  tasks.py  telegram_scraper.py  telegram_service.py  text_processor.py  trend_analyzer.py
clients/: dexscreener.py  explorer.py  telegram.py
frontend/: package-lock.json  package.json
frontend/src/: Analytics.jsx  App.css  App.jsx  CampaignModal.css  CampaignModal.jsx  Campaigns.jsx  Dashboard.jsx  LeadsList.jsx  Login.jsx  MainApp.jsx  MessageTemplates.jsx  Register.jsx  RegisterBusiness.jsx  SmartMoney.css  SmartMoney.jsx  TrendAnalysis.jsx  index.css
interactive-discounts/: interactive-discounts.php
interactive-discounts-p2p/: .gitignore  run.py
risk_remover/: app.py
scripts/: generate_wallet.sh  setup.sh
smart-upsell-for-woocommerce/: smart-upsell-for-woocommerce.php
src/: main.rs
verification/: verify_app.py  verify_mvp.py
(+66 files in other folders)
